# espidf_mcp

./: .gitattributes  .gitignore  LICENSE  MANIFEST.in  README.md  __init__.py  __main__.py  cli.py  project.py  pyproject.toml  server.py  test_helpers.py  workflow_server.py
.claude/skills/ci-remediation/: SKILL.md
.claude/skills/ci-remediation/references/: common-errors.md
.github/ISSUE_TEMPLATE/: ci-failure.md
.github/workflows/: test.yml
checkers/: __init__.py  base.py
config/: __init__.py  default.yaml  limits.py  permissions.py  workflow.yaml
docs/: AGENT_INTEGRATION.md
examples/: mcp-client-config.json
mcp_tools/: __init__.py  base.py  build.py  config.py  exceptions.py  flash.py  monitor.py
observability/: __init__.py  diagnostics.py  formatters.py  logger.py  metrics.py
tests/: conftest.py  test_e2e.py  test_exceptions.py  test_integration.py  test_observability.py  test_security.py  test_workflow.py
tools/: __init__.py  base.py  esptool.py
utils/: __init__.py  path_utils.py
workflow/: __init__.py  agent_integration.py  file_state.py  manager.py  stages.py
